--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 $color-primary: #0071bc;
 $color-black: #000;
-$color-ass-black: #333333;
-$color-ass: #4c515d;
+$color-ash-black: #333333;
+$color-ash: #4c515d;
 $color-white: #fff;
 $color-red: #ff0000;
 $color-dark-red: #8e0000;
