--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -3,7 +3,7 @@
    overflow: hidden;
    height: 100%;
    border-radius: 5px;
-   border: 1px solid #ffffff;
+   border: 1px solid $color-white;
    // max-width: 365px;
    
 
