--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -5,7 +5,7 @@
    overflow: hidden;
 
    .form-header{
-      background: $color-ass;
+      background: $color-ash;
       padding: 15px 0;
 
       h3{
@@ -17,12 +17,12 @@
 
    .form-body{
       padding: 0 30px;
-      background: rgba($color-ass, 0.6);
+      background: rgba($color-ash, 0.6);
 
       .input-item{
          display: flex;
          align-items: center;
-         border-bottom: 1px solid #5e616a;
+         border-bottom: 1px solid $color-ash;
 
          .input-box{
             background: transparent;
@@ -62,7 +62,7 @@
       align-items: center;
       padding: 10px 0;
       border-radius: 40px;
-      background: rgba($color-ass, 0.6);
+      background: rgba($color-ash, 0.6);
       width: 50%;
 
       @media screen and (max-width: 991px) {
