--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -202,6 +202,24 @@
       flex-direction: column;
    }
    
+   .icon{
+      position: relative;
+      
+      .bell-notification{
+         position: absolute;
+         top: 12%;
+         right: -2px;
+         background: $color-red;
+         height: 20px;
+         width: 20px;
+         padding: 5px;
+         border-radius: 50%;
+         border: 3px solid $color-white;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+      }
+   }
    .text{
       h3{
          font-family: 'Century Gothic Bold';
@@ -255,7 +273,7 @@
       h4{
          font-family: 'Myriad Pro Bold';
          text-transform: uppercase;
-         color: $color-ass-black;
+         color: $color-ash-black;
          font-size: 17px;
          padding-bottom: 15px;
       }
@@ -263,7 +281,7 @@
       p{
          font-family: 'Myriad Pro Regular';
          font-size: 15px;
-         color: $color-ass-black;
+         color: $color-ash-black;
       }
    }
 }
