--- a/assets/scss/components/_trading-program.scss
+++ b/assets/scss/components/_trading-program.scss
@@ -9,7 +9,6 @@
       background: url(../images/trading-program/btg.png) no-repeat top center/cover; 
    
       .section-header{
-
          h2{
             margin: 25px 0;
             font-family: 'Century Gothic Bold';
@@ -20,6 +19,32 @@
             span{
                color: $color-white;
                font-size: 40px;
+            }
+         }
+      }
+
+      .image{
+         position: relative;
+         padding: 30px 0;
+
+         @media(max-width: 991px){
+            padding: 50px 0;
+         }
+         @media(max-width: 767px){
+            padding: 65px 0;
+         }
+
+         .modal{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+
+            .button{
+               position: relative;
+               z-index: 999;
             }
          }
       }
