--- a/assets/scss/layouts/_footer.scss
+++ b/assets/scss/layouts/_footer.scss
@@ -57,7 +57,8 @@
       a{
          font-family: 'Century Gothic Regular';
          font-size: 15px;
-         color: $color-white
+         color: $color-white;
+         word-break: break-word;
       }
    }
 
@@ -76,9 +77,15 @@
             display: flex;
             li{
                margin: 0 10px;
+               @media(max-width: 450px){
+                  margin: 0 5px;
+               }
 
                img{
                   max-width: 25px;
+                  @media(max-width: 450px){
+                     max-width: 20px;
+                  }
                }
             }
          }
