--- a/assets/scss/base/_utility.scss
+++ b/assets/scss/base/_utility.scss
@@ -1,13 +1,12 @@
-.top-index{
-   position: relative;
-   z-index: 999;
-}
-
 .section-heading{
    font-family: 'Century Gothic Regular';
    font-size: 35px;
    color: $color-white;
    span{
       font-family: 'Century Gothic Bold';
+   }
+
+   @media(max-width: 768px){
+      font-size: 30px;
    }
 }
