--- a/assets/scss/layouts/_navbar.scss
+++ b/assets/scss/layouts/_navbar.scss
@@ -53,6 +53,12 @@
                   }
                }
             }
+
+            &.image{
+               @media(max-width:1199px) {
+                  display: none;
+             }
+            }
          }
       }
    }
