--- a/assets/scss/components/_membership.scss
+++ b/assets/scss/components/_membership.scss
@@ -1,8 +1,8 @@
 .membership-program{
-   padding-top: 120px;
    background: url(../images/membership/full-member-bg.png);
-
-   @media screen and (max-width: 768px){
-      padding-top: 25px;      
+   padding: 80px 0;
+  
+   @media(max-width: 767px) {
+      padding: 50px 0;
    }
 }
