--- a/assets/scss/components/_dashboard.scss
+++ b/assets/scss/components/_dashboard.scss
@@ -3,7 +3,7 @@
    background: url(../images/dashboard/dashboard-bg.png) no-repeat center center/cover;
   
    .main-content{
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       align-items: center;
    
